css tweaks to get to fit screen correctly on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,8 +7,8 @@
 .main-wrapper {
     display: grid;
     grid-template-rows: 1fr 10fr 1fr;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     max-height: 900px;
     max-width: 1200px;
 }
